# omsu_cpp_course

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  README.md  Vagrantfile  exams.md  faq.md  materials.md  rules.md
.obsidian/: workspace
_pages/: adt.md  algorithms.md  dynamic_memory.md  recursion.md
book-of-algorithms/: README.md
book-of-c/: README.md
book-of-cpp/: README.md
code/lectures/ui_template_sdl2/: CMakeLists.txt
lectures/: oop.cpp
notes/: README.md  adt.md  arrays.md  functional_abstraction.md  intro.md  memory_model.md  pointers.md  Гайд Отладка и IDE.md
tasks/: test.h
tasks_1/: HashMap-Set.md  Swap.md  _index.md  Абсолютная-величина.md  Анаграма.md  Байтомешалка.md  Быстрое-рекурсивное-возведение-в-степень.md  Длина-строки.md  Задом-наперёд.md  Изменение-аргументов-(в-теорию).md  Итеративный-Фибоначчи.md  Капитализация-слов.md  Квадратичная-сортировка.md  Квадратное-уравнение.md  Копирование-строк.md  Копирование-строки-в-кучу.md  Кусочная-функция.md  Максимум-диагонали.md  Максимум-подряд.md  Матрица трансформаций.md  Метод-Ньютона.md  Палиндром.md  Перестановки.md  Поиск-подстроки.md  Произведение-матриц.md  Простой-палиндром.md  Простые-числа.md  Разбиение-строки-разделителем.md  Расстояние-между-словами.md  Рекурсивное-возведение-в-степень.md  Рекурсивный-Фибоначчи.md  Создание-и-удаление-матрицы.md  Сортировка-подсчетом.md  Сортировка-слиянием.md  Список-LinkedList-&-ArrayList.md  Статистики.md  Строки-матрицы.md  Строку-в-число.md  Сумма-цифр-(рекурсивно).md  Сумма-цифр.md  (+3 more)
tasks_2/: Linked & Array List.md  README.md  (+9 more)
(+169 files in other folders)
